# mw_fdtd

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
mw_fdtd/: __init__.py  plotting.py  tm_2d.py  utils.py
scripts/: mw_comparison.py  mw_simple.py
